[package]
authors = ["shadyfennec"]
description = "A stupid memory allocator that memory-maps allocations to files."
edition = "2021"
keywords = ["allocator", "memory"]
license = "MIT OR Apache-2.0"
name = "stupidalloc"
readme = "README.md"
repository = "https://github.com/shadyfennec/stupidalloc"
version = "0.1.0"

[features]
interactive = ["native-dialog"]

[dependencies]
lazy_static = "1.4.0"
memmap2 = "0.7.1"
native-dialog = {version = "0.6.4", optional = true, features = ["windows_dpi_awareness", "windows_visual_styles"]}
